@@ -1,10 +1,8 @@
 package de.goaldone.backend.service;
 
+import com.zitadel.model.OrganizationServiceListOrganizationsResponse;
 import de.goaldone.backend.client.ZitadelManagementClient;
-import de.goaldone.backend.client.ZitadelManagementClient.ZitadelOrgInfo;
-import de.goaldone.backend.client.ZitadelManagementClient.ZitadelUserInfo;
 import de.goaldone.backend.entity.OrganizationEntity;
-import de.goaldone.backend.entity.UserAccountEntity;
 import de.goaldone.backend.exception.ConflictException;
 import de.goaldone.backend.exception.PartialDeletionException;
 import de.goaldone.backend.exception.ZitadelApiException;
@@ -13,11 +11,9 @@ import de.goaldone.backend.model.OrganizationListItem;
 import de.goaldone.backend.model.OrganizationListResponse;
 import de.goaldone.backend.model.OrganizationResponse;
 import de.goaldone.backend.repository.OrganizationRepository;
-import de.goaldone.backend.repository.UserAccountRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
@@ -26,10 +22,8 @@ import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -45,8 +39,7 @@ public class OrganizationManagementService {
 
     private final ZitadelManagementClient zitadelManagementClient;
     private final OrganizationRepository organizationRepository;
-    private final UserAccountRepository userAccountRepository;
-    private final UserAccountDeletionService userAccountDeletionService;
+    private final DeletionService deletionService;
 
     @Value("${zitadel.goaldone.project-id}")
     private String projectId;
@@ -61,8 +54,8 @@ public class OrganizationManagementService {
      * @param req The {@link CreateOrganizationRequest} containing organization and admin user details.
      * @return An {@link OrganizationResponse} summarizing the created organization.
      * @throws IllegalStateException if required configuration is missing.
-     * @throws ConflictException if the admin email or organization name already exists.
-     * @throws ZitadelApiException if any step in the multi-stage creation process fails.
+     * @throws ConflictException     if the admin email or organization name already exists.
+     * @throws ZitadelApiException   if any step in the multi-stage creation process fails.
      */
     @Transactional
     public OrganizationResponse createOrganization(CreateOrganizationRequest req) {
@@ -143,31 +136,28 @@ public class OrganizationManagementService {
 
         log.info("Listing organizations in DB {}", localByZitadelId.keySet());
 
-        List<ZitadelOrgInfo> zitadelOrgs = zitadelManagementClient.listAllOrganizations();
+        OrganizationServiceListOrganizationsResponse zitadelOrgs = zitadelManagementClient.listOrganizations();
 
-        List<OrganizationListItem> items = zitadelOrgs.stream()
-                .filter(zOrg -> !mainOrgId.equals(zOrg.id()))
+        if(zitadelOrgs.getResult() == null) {
+            return new OrganizationListResponse();
+        }
+        List<OrganizationListItem> items = zitadelOrgs.getResult().stream()
+                .filter(zOrg -> !mainOrgId.equals(zOrg.getId()))
                 .map(zOrg -> {
-                    OrganizationEntity local = localByZitadelId.get(zOrg.id());
-                    log.info("Mapping zitadelOrgId={} to localOrgId={}", zOrg.id(), local != null ? local.getId() : null);
-                    /*
-                    List<String> userIds = zitadelManagementClient.listAllUserIdsForOrgProject(zOrg.id(), projectId);
-                    Map<String, String> states = zitadelManagementClient.getUserStates(userIds);
-                    long active = states.values().stream().filter("USER_STATE_ACTIVE"::equals).count();
-                    long invited = states.values().stream().filter("USER_STATE_INITIAL"::equals).count();
+                    OrganizationEntity local = localByZitadelId.get(zOrg.getId());
+                    log.info("Mapping zitadelOrgId={} to localOrgId={}", zOrg.getId(), local != null ? local.getId() : null);
 
-
-                     */
-                    OffsetDateTime createdAt = (local != null)
+                    OffsetDateTime createdAt = (local != null && zOrg.getDetails() != null)
                             ? local.getCreatedAt().atOffset(ZoneOffset.UTC)
-                            : zOrg.creationDate();
+                            : zOrg.getDetails().getCreationDate();
 
                     return new OrganizationListItem()
                             .id(local != null ? local.getId() : null)
-                            .zitadelOrganizationId(zOrg.id())
-                            .name(zOrg.name())
+                            .zitadelOrganizationId(zOrg.getId())
+                            .name(zOrg.getName())
                             .createdAt(createdAt);
-                }).toList();
+                })
+                .collect(Collectors.toList());
 
         return new OrganizationListResponse().organizations(items);
     }
@@ -175,7 +165,7 @@ public class OrganizationManagementService {
     /**
      * Deletes an organization and all its members in a cascading operation across Zitadel and the local database.
      * <p>
-     * Deletion order: active members (via {@link UserAccountDeletionService}) → invited members (direct Zitadel delete)
+     * Deletion order: active members (via {@link DeletionService}) → invited members (direct Zitadel delete)
      * → Zitadel organization → local record.
      * <p>
      * The operation does not require a local database record to exist. If the organization exists in Zitadel,
@@ -186,78 +176,13 @@ public class OrganizationManagementService {
      * {@link PartialDeletionException} without deleting the organization itself, enabling a retry.
      *
      * @param zitadelOrgId the Zitadel organization ID to delete
-     * @throws ResponseStatusException   with 403 if attempting to delete the home organization
-     * @throws ZitadelApiException       if listing org members or deleting the Zitadel organization fails
-     * @throws PartialDeletionException  if one or more member deletions fail
+     * @throws ResponseStatusException  with 403 if attempting to delete the home organization
+     * @throws ZitadelApiException      if listing org members or deleting the Zitadel organization fails
+     * @throws PartialDeletionException if one or more member deletions fail
      */
+    @Transactional
     public void deleteOrganization(String zitadelOrgId) {
-
-        ZitadelOrgInfo zitadelOrg;
-        try {
-            zitadelOrg = zitadelManagementClient.getOrgInfo(zitadelOrgId);
-        } catch (ZitadelApiException e) {
-            if (e.getMessage() != null && e.getMessage().contains("No organization found for id")) {
-                throw new ResponseStatusException(HttpStatus.NOT_FOUND, "ORGANIZATION_NOT_FOUND");
-            }
-            throw e;
-        }
-
-        Optional<OrganizationEntity> orgOptional = organizationRepository.findByZitadelOrgId(zitadelOrg.id());
-
-        if (mainOrgId.equals(zitadelOrg.id())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "HOME_ORGANIZATION_CANNOT_BE_DELETED");
-        }
-
-        List<ZitadelUserInfo> users = zitadelManagementClient.listUsersInOrganization(zitadelOrgId);
-
-        List<String> failedUserIds = new ArrayList<>();
-
-        for (ZitadelUserInfo user : users) {
-            if ("USER_STATE_ACTIVE".equals(user.state())) {
-                Optional<UserAccountEntity> account = userAccountRepository.findByZitadelSub(user.id());
-                if (account.isPresent()) {
-                    try {
-                        userAccountDeletionService.deleteUserAccount(account.get().getId());
-                    } catch (Exception e) {
-                        log.error("Failed to delete active user account {} (zitadelSub={}): {}",
-                                account.get().getId(), user.id(), e.getMessage());
-                        failedUserIds.add(user.id());
-                    }
-                } else {
-                    // Active in Zitadel but no local shadow record — delete directly
-                    try {
-                        zitadelManagementClient.deleteUserOrThrow(user.id());
-                    } catch (Exception e) {
-                        log.error("Failed to delete Zitadel user {} (no local account): {}", user.id(), e.getMessage());
-                        failedUserIds.add(user.id());
-                    }
-                }
-            } else {
-                // Invited (USER_STATE_INITIAL) or any other state — no local record, delete directly in Zitadel
-                try {
-                    zitadelManagementClient.deleteUserOrThrow(user.id());
-                } catch (Exception e) {
-                    log.error("Failed to delete invited user {} in Zitadel: {}", user.id(), e.getMessage());
-                    failedUserIds.add(user.id());
-                }
-            }
-        }
-
-        if (!failedUserIds.isEmpty()) {
-            throw new PartialDeletionException(failedUserIds);
-        }
-
-        zitadelManagementClient.deleteOrganizationOrThrow(zitadelOrg.id());
-
-        orgOptional.ifPresent(org -> {
-            try {
-                organizationRepository.deleteById(org.getId());
-                log.info("Deleted organization {} (zitadelOrgId={})", org.getId(), org.getZitadelOrgId());
-            } catch (Exception e) {
-                log.error("Failed to delete local organization record {}: {}", org.getId(), e.getMessage());
-                throw new ZitadelApiException("Failed to delete local organization record: " + e.getMessage(), e);
-            }
-        });
+        deletionService.deleteOrg(zitadelOrgId);
     }
 
     /**
@@ -319,6 +244,7 @@ public class OrganizationManagementService {
             log.error("Error deleting Zitadel organization {} during compensation: {}", zitadelOrgId, e.getMessage());
         }
     }
+
     private String normalizeEmail(String email) {
         if (email == null) {
             return null;
